スコアとして表示したい要素を、配列としてまとめておく
要素をクリックしてachieve--activeクラスが付いたら、その要素を配列にpushする。
という処理を書いた。

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <br>
     <div>
       <h2>Good</h2>
-      <div class="foods-container">
+      <div class="achieve-container">
         <div class="achieve-list">
           <div class="achieve">
             <div class="achieve__name">プログラミング</div>
@@ -40,11 +40,11 @@
             <div class="achieve__score">+3</div>
           </div>
           <div class="achieve">
-            <div class="achieve__name">筋トレ</div>
+            <div class="achieve__name">6時間睡眠</div>
             <div class="achieve__score">+2</div>
           </div>
           <div class="achieve">
-            <div class="achieve__name">睡眠</div>
+            <div class="achieve__name">筋トレ</div>
             <div class="achieve__score">+1</div>
           </div>
         </div>
@@ -53,7 +53,7 @@
     <br>
     <div>
       <h2>Bad</h2>
-      <div class="achieves-container">
+      <div class="achieve-container">
         <div class="achieve-list">
           <div class="achieve">
             <div class="achieve__name">Butter and margarine</div>
