--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <br>
     <div>
-      <h2>Good</h2>
+      <h2 class="message">Let's do it!</h2>
       <div class="achieve-container">
         <div class="achieve-list">
           <div class="achieve">
